// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<NodeCountInput> Multi AZ renders with no quota 1`] = `
<FormGroup
  fieldId="compute-nodes"
  label="compute nodes"
>
  <FormSelect
    aria-label="Compute nodes"
    className="quota-dropdown"
    isDisabled={false}
    isIconSprite={false}
    isRequired={false}
    name="compute-nodes"
    onBlur={[Function]}
    onChange={[MockFunction]}
    onFocus={[Function]}
    ouiaSafe={true}
    validated="default"
    value=""
  >
    <FormSelectOption
      key="9"
      label="3"
      value={9}
    />
  </FormSelect>
  <span>
    × 3 zones =
     
     
    compute nodes
  </span>
</FormGroup>
`;

exports[`<NodeCountInput> Multi AZ renders with some quota 1`] = `
<FormGroup
  fieldId="compute-nodes"
  label="compute nodes"
>
  <FormSelect
    aria-label="Compute nodes"
    className="quota-dropdown"
    isDisabled={false}
    isIconSprite={false}
    isRequired={false}
    name="compute-nodes"
    onBlur={[Function]}
    onChange={[MockFunction]}
    onFocus={[Function]}
    ouiaSafe={true}
    validated="default"
    value=""
  >
    <FormSelectOption
      key="9"
      label="3"
      value={9}
    />
    <FormSelectOption
      key="12"
      label="4"
      value={12}
    />
  </FormSelect>
  <span>
    × 3 zones =
     
     
    compute nodes
  </span>
</FormGroup>
`;

exports[`<NodeCountInput> Single AZ BYOC and is editing a machine pool renders enabled 1`] = `
<FormGroup
  fieldId="compute-nodes"
  label="compute nodes"
>
  <FormSelect
    aria-label="Compute nodes"
    className="quota-dropdown"
    isDisabled={false}
    isIconSprite={false}
    isRequired={false}
    name="compute-nodes"
    onBlur={[Function]}
    onChange={[MockFunction]}
    onFocus={[Function]}
    ouiaSafe={true}
    validated="default"
    value=""
  >
    <FormSelectOption
      key="2"
      label="2"
      value={2}
    />
  </FormSelect>
</FormGroup>
`;

exports[`<NodeCountInput> Single AZ BYOC and is editing cluster renders enabled 1`] = `
<FormGroup
  fieldId="compute-nodes"
  label="compute nodes"
>
  <FormSelect
    aria-label="Compute nodes"
    className="quota-dropdown"
    isDisabled={false}
    isIconSprite={false}
    isRequired={false}
    name="compute-nodes"
    onBlur={[Function]}
    onChange={[MockFunction]}
    onFocus={[Function]}
    ouiaSafe={true}
    validated="default"
    value=""
  >
    <FormSelectOption
      key="2"
      label="2"
      value={2}
    />
    <FormSelectOption
      key="3"
      label="3"
      value={3}
    />
    <FormSelectOption
      key="4"
      label="4"
      value={4}
    />
  </FormSelect>
</FormGroup>
`;

exports[`<NodeCountInput> Single AZ BYOC renders with quota granted but insufficient amount 1`] = `
<FormGroup
  fieldId="compute-nodes"
  label="compute nodes"
>
  <Tooltip
    content="You do not have enough quota for this option. Contact sales to purchase additional quota."
    position="right"
  >
    <div>
      <FormSelect
        aria-label="Compute nodes"
        className="quota-dropdown"
        isDisabled={true}
        isIconSprite={false}
        isRequired={false}
        name="compute-nodes"
        onBlur={[Function]}
        onChange={[MockFunction]}
        onFocus={[Function]}
        ouiaSafe={true}
        validated="default"
        value=""
      >
        <FormSelectOption
          key="2"
          label="2"
          value={2}
        />
      </FormSelect>
    </div>
  </Tooltip>
</FormGroup>
`;

exports[`<NodeCountInput> Single AZ renders with extremely high quota (should only allow up to MAX_NODES) 1`] = `
<FormGroup
  fieldId="compute-nodes"
  label="compute nodes"
>
  <FormSelect
    aria-label="Compute nodes"
    className="quota-dropdown"
    isDisabled={false}
    isIconSprite={false}
    isRequired={false}
    name="compute-nodes"
    onBlur={[Function]}
    onChange={[MockFunction]}
    onFocus={[Function]}
    ouiaSafe={true}
    validated="default"
    value=""
  >
    <FormSelectOption
      key="4"
      label="4"
      value={4}
    />
    <FormSelectOption
      key="5"
      label="5"
      value={5}
    />
    <FormSelectOption
      key="6"
      label="6"
      value={6}
    />
    <FormSelectOption
      key="7"
      label="7"
      value={7}
    />
    <FormSelectOption
      key="8"
      label="8"
      value={8}
    />
    <FormSelectOption
      key="9"
      label="9"
      value={9}
    />
    <FormSelectOption
      key="10"
      label="10"
      value={10}
    />
    <FormSelectOption
      key="11"
      label="11"
      value={11}
    />
    <FormSelectOption
      key="12"
      label="12"
      value={12}
    />
    <FormSelectOption
      key="13"
      label="13"
      value={13}
    />
    <FormSelectOption
      key="14"
      label="14"
      value={14}
    />
    <FormSelectOption
      key="15"
      label="15"
      value={15}
    />
    <FormSelectOption
      key="16"
      label="16"
      value={16}
    />
    <FormSelectOption
      key="17"
      label="17"
      value={17}
    />
    <FormSelectOption
      key="18"
      label="18"
      value={18}
    />
    <FormSelectOption
      key="19"
      label="19"
      value={19}
    />
    <FormSelectOption
      key="20"
      label="20"
      value={20}
    />
    <FormSelectOption
      key="21"
      label="21"
      value={21}
    />
    <FormSelectOption
      key="22"
      label="22"
      value={22}
    />
    <FormSelectOption
      key="23"
      label="23"
      value={23}
    />
    <FormSelectOption
      key="24"
      label="24"
      value={24}
    />
    <FormSelectOption
      key="25"
      label="25"
      value={25}
    />
    <FormSelectOption
      key="26"
      label="26"
      value={26}
    />
    <FormSelectOption
      key="27"
      label="27"
      value={27}
    />
    <FormSelectOption
      key="28"
      label="28"
      value={28}
    />
    <FormSelectOption
      key="29"
      label="29"
      value={29}
    />
    <FormSelectOption
      key="30"
      label="30"
      value={30}
    />
    <FormSelectOption
      key="31"
      label="31"
      value={31}
    />
    <FormSelectOption
      key="32"
      label="32"
      value={32}
    />
    <FormSelectOption
      key="33"
      label="33"
      value={33}
    />
    <FormSelectOption
      key="34"
      label="34"
      value={34}
    />
    <FormSelectOption
      key="35"
      label="35"
      value={35}
    />
    <FormSelectOption
      key="36"
      label="36"
      value={36}
    />
    <FormSelectOption
      key="37"
      label="37"
      value={37}
    />
    <FormSelectOption
      key="38"
      label="38"
      value={38}
    />
    <FormSelectOption
      key="39"
      label="39"
      value={39}
    />
    <FormSelectOption
      key="40"
      label="40"
      value={40}
    />
    <FormSelectOption
      key="41"
      label="41"
      value={41}
    />
    <FormSelectOption
      key="42"
      label="42"
      value={42}
    />
    <FormSelectOption
      key="43"
      label="43"
      value={43}
    />
    <FormSelectOption
      key="44"
      label="44"
      value={44}
    />
    <FormSelectOption
      key="45"
      label="45"
      value={45}
    />
    <FormSelectOption
      key="46"
      label="46"
      value={46}
    />
    <FormSelectOption
      key="47"
      label="47"
      value={47}
    />
    <FormSelectOption
      key="48"
      label="48"
      value={48}
    />
    <FormSelectOption
      key="49"
      label="49"
      value={49}
    />
    <FormSelectOption
      key="50"
      label="50"
      value={50}
    />
    <FormSelectOption
      key="51"
      label="51"
      value={51}
    />
    <FormSelectOption
      key="52"
      label="52"
      value={52}
    />
    <FormSelectOption
      key="53"
      label="53"
      value={53}
    />
    <FormSelectOption
      key="54"
      label="54"
      value={54}
    />
    <FormSelectOption
      key="55"
      label="55"
      value={55}
    />
    <FormSelectOption
      key="56"
      label="56"
      value={56}
    />
    <FormSelectOption
      key="57"
      label="57"
      value={57}
    />
    <FormSelectOption
      key="58"
      label="58"
      value={58}
    />
    <FormSelectOption
      key="59"
      label="59"
      value={59}
    />
    <FormSelectOption
      key="60"
      label="60"
      value={60}
    />
    <FormSelectOption
      key="61"
      label="61"
      value={61}
    />
    <FormSelectOption
      key="62"
      label="62"
      value={62}
    />
    <FormSelectOption
      key="63"
      label="63"
      value={63}
    />
    <FormSelectOption
      key="64"
      label="64"
      value={64}
    />
    <FormSelectOption
      key="65"
      label="65"
      value={65}
    />
    <FormSelectOption
      key="66"
      label="66"
      value={66}
    />
    <FormSelectOption
      key="67"
      label="67"
      value={67}
    />
    <FormSelectOption
      key="68"
      label="68"
      value={68}
    />
    <FormSelectOption
      key="69"
      label="69"
      value={69}
    />
    <FormSelectOption
      key="70"
      label="70"
      value={70}
    />
    <FormSelectOption
      key="71"
      label="71"
      value={71}
    />
    <FormSelectOption
      key="72"
      label="72"
      value={72}
    />
    <FormSelectOption
      key="73"
      label="73"
      value={73}
    />
    <FormSelectOption
      key="74"
      label="74"
      value={74}
    />
    <FormSelectOption
      key="75"
      label="75"
      value={75}
    />
    <FormSelectOption
      key="76"
      label="76"
      value={76}
    />
    <FormSelectOption
      key="77"
      label="77"
      value={77}
    />
    <FormSelectOption
      key="78"
      label="78"
      value={78}
    />
    <FormSelectOption
      key="79"
      label="79"
      value={79}
    />
    <FormSelectOption
      key="80"
      label="80"
      value={80}
    />
    <FormSelectOption
      key="81"
      label="81"
      value={81}
    />
    <FormSelectOption
      key="82"
      label="82"
      value={82}
    />
    <FormSelectOption
      key="83"
      label="83"
      value={83}
    />
    <FormSelectOption
      key="84"
      label="84"
      value={84}
    />
    <FormSelectOption
      key="85"
      label="85"
      value={85}
    />
    <FormSelectOption
      key="86"
      label="86"
      value={86}
    />
    <FormSelectOption
      key="87"
      label="87"
      value={87}
    />
    <FormSelectOption
      key="88"
      label="88"
      value={88}
    />
    <FormSelectOption
      key="89"
      label="89"
      value={89}
    />
    <FormSelectOption
      key="90"
      label="90"
      value={90}
    />
    <FormSelectOption
      key="91"
      label="91"
      value={91}
    />
    <FormSelectOption
      key="92"
      label="92"
      value={92}
    />
    <FormSelectOption
      key="93"
      label="93"
      value={93}
    />
    <FormSelectOption
      key="94"
      label="94"
      value={94}
    />
    <FormSelectOption
      key="95"
      label="95"
      value={95}
    />
    <FormSelectOption
      key="96"
      label="96"
      value={96}
    />
    <FormSelectOption
      key="97"
      label="97"
      value={97}
    />
    <FormSelectOption
      key="98"
      label="98"
      value={98}
    />
    <FormSelectOption
      key="99"
      label="99"
      value={99}
    />
    <FormSelectOption
      key="100"
      label="100"
      value={100}
    />
    <FormSelectOption
      key="101"
      label="101"
      value={101}
    />
    <FormSelectOption
      key="102"
      label="102"
      value={102}
    />
    <FormSelectOption
      key="103"
      label="103"
      value={103}
    />
    <FormSelectOption
      key="104"
      label="104"
      value={104}
    />
    <FormSelectOption
      key="105"
      label="105"
      value={105}
    />
    <FormSelectOption
      key="106"
      label="106"
      value={106}
    />
    <FormSelectOption
      key="107"
      label="107"
      value={107}
    />
    <FormSelectOption
      key="108"
      label="108"
      value={108}
    />
    <FormSelectOption
      key="109"
      label="109"
      value={109}
    />
    <FormSelectOption
      key="110"
      label="110"
      value={110}
    />
    <FormSelectOption
      key="111"
      label="111"
      value={111}
    />
    <FormSelectOption
      key="112"
      label="112"
      value={112}
    />
    <FormSelectOption
      key="113"
      label="113"
      value={113}
    />
    <FormSelectOption
      key="114"
      label="114"
      value={114}
    />
    <FormSelectOption
      key="115"
      label="115"
      value={115}
    />
    <FormSelectOption
      key="116"
      label="116"
      value={116}
    />
    <FormSelectOption
      key="117"
      label="117"
      value={117}
    />
    <FormSelectOption
      key="118"
      label="118"
      value={118}
    />
    <FormSelectOption
      key="119"
      label="119"
      value={119}
    />
    <FormSelectOption
      key="120"
      label="120"
      value={120}
    />
    <FormSelectOption
      key="121"
      label="121"
      value={121}
    />
    <FormSelectOption
      key="122"
      label="122"
      value={122}
    />
    <FormSelectOption
      key="123"
      label="123"
      value={123}
    />
    <FormSelectOption
      key="124"
      label="124"
      value={124}
    />
    <FormSelectOption
      key="125"
      label="125"
      value={125}
    />
    <FormSelectOption
      key="126"
      label="126"
      value={126}
    />
    <FormSelectOption
      key="127"
      label="127"
      value={127}
    />
    <FormSelectOption
      key="128"
      label="128"
      value={128}
    />
    <FormSelectOption
      key="129"
      label="129"
      value={129}
    />
    <FormSelectOption
      key="130"
      label="130"
      value={130}
    />
    <FormSelectOption
      key="131"
      label="131"
      value={131}
    />
    <FormSelectOption
      key="132"
      label="132"
      value={132}
    />
    <FormSelectOption
      key="133"
      label="133"
      value={133}
    />
    <FormSelectOption
      key="134"
      label="134"
      value={134}
    />
    <FormSelectOption
      key="135"
      label="135"
      value={135}
    />
    <FormSelectOption
      key="136"
      label="136"
      value={136}
    />
    <FormSelectOption
      key="137"
      label="137"
      value={137}
    />
    <FormSelectOption
      key="138"
      label="138"
      value={138}
    />
    <FormSelectOption
      key="139"
      label="139"
      value={139}
    />
    <FormSelectOption
      key="140"
      label="140"
      value={140}
    />
    <FormSelectOption
      key="141"
      label="141"
      value={141}
    />
    <FormSelectOption
      key="142"
      label="142"
      value={142}
    />
    <FormSelectOption
      key="143"
      label="143"
      value={143}
    />
    <FormSelectOption
      key="144"
      label="144"
      value={144}
    />
    <FormSelectOption
      key="145"
      label="145"
      value={145}
    />
    <FormSelectOption
      key="146"
      label="146"
      value={146}
    />
    <FormSelectOption
      key="147"
      label="147"
      value={147}
    />
    <FormSelectOption
      key="148"
      label="148"
      value={148}
    />
    <FormSelectOption
      key="149"
      label="149"
      value={149}
    />
    <FormSelectOption
      key="150"
      label="150"
      value={150}
    />
    <FormSelectOption
      key="151"
      label="151"
      value={151}
    />
    <FormSelectOption
      key="152"
      label="152"
      value={152}
    />
    <FormSelectOption
      key="153"
      label="153"
      value={153}
    />
    <FormSelectOption
      key="154"
      label="154"
      value={154}
    />
    <FormSelectOption
      key="155"
      label="155"
      value={155}
    />
    <FormSelectOption
      key="156"
      label="156"
      value={156}
    />
    <FormSelectOption
      key="157"
      label="157"
      value={157}
    />
    <FormSelectOption
      key="158"
      label="158"
      value={158}
    />
    <FormSelectOption
      key="159"
      label="159"
      value={159}
    />
    <FormSelectOption
      key="160"
      label="160"
      value={160}
    />
    <FormSelectOption
      key="161"
      label="161"
      value={161}
    />
    <FormSelectOption
      key="162"
      label="162"
      value={162}
    />
    <FormSelectOption
      key="163"
      label="163"
      value={163}
    />
    <FormSelectOption
      key="164"
      label="164"
      value={164}
    />
    <FormSelectOption
      key="165"
      label="165"
      value={165}
    />
    <FormSelectOption
      key="166"
      label="166"
      value={166}
    />
    <FormSelectOption
      key="167"
      label="167"
      value={167}
    />
    <FormSelectOption
      key="168"
      label="168"
      value={168}
    />
    <FormSelectOption
      key="169"
      label="169"
      value={169}
    />
    <FormSelectOption
      key="170"
      label="170"
      value={170}
    />
    <FormSelectOption
      key="171"
      label="171"
      value={171}
    />
    <FormSelectOption
      key="172"
      label="172"
      value={172}
    />
    <FormSelectOption
      key="173"
      label="173"
      value={173}
    />
    <FormSelectOption
      key="174"
      label="174"
      value={174}
    />
    <FormSelectOption
      key="175"
      label="175"
      value={175}
    />
    <FormSelectOption
      key="176"
      label="176"
      value={176}
    />
    <FormSelectOption
      key="177"
      label="177"
      value={177}
    />
    <FormSelectOption
      key="178"
      label="178"
      value={178}
    />
    <FormSelectOption
      key="179"
      label="179"
      value={179}
    />
    <FormSelectOption
      key="180"
      label="180"
      value={180}
    />
  </FormSelect>
</FormGroup>
`;

exports[`<NodeCountInput> Single AZ renders with no quota 1`] = `
<FormGroup
  fieldId="compute-nodes"
  label="compute nodes"
>
  <FormSelect
    aria-label="Compute nodes"
    className="quota-dropdown"
    isDisabled={false}
    isIconSprite={false}
    isRequired={false}
    name="compute-nodes"
    onBlur={[Function]}
    onChange={[MockFunction]}
    onFocus={[Function]}
    ouiaSafe={true}
    validated="default"
    value=""
  >
    <FormSelectOption
      key="4"
      label="4"
      value={4}
    />
  </FormSelect>
</FormGroup>
`;

exports[`<NodeCountInput> Single AZ renders with some quota 1`] = `
<FormGroup
  fieldId="compute-nodes"
  label="compute nodes"
>
  <FormSelect
    aria-label="Compute nodes"
    className="quota-dropdown"
    isDisabled={false}
    isIconSprite={false}
    isRequired={false}
    name="compute-nodes"
    onBlur={[Function]}
    onChange={[MockFunction]}
    onFocus={[Function]}
    ouiaSafe={true}
    validated="default"
    value=""
  >
    <FormSelectOption
      key="4"
      label="4"
      value={4}
    />
    <FormSelectOption
      key="5"
      label="5"
      value={5}
    />
    <FormSelectOption
      key="6"
      label="6"
      value={6}
    />
    <FormSelectOption
      key="7"
      label="7"
      value={7}
    />
    <FormSelectOption
      key="8"
      label="8"
      value={8}
    />
    <FormSelectOption
      key="9"
      label="9"
      value={9}
    />
    <FormSelectOption
      key="10"
      label="10"
      value={10}
    />
    <FormSelectOption
      key="11"
      label="11"
      value={11}
    />
    <FormSelectOption
      key="12"
      label="12"
      value={12}
    />
    <FormSelectOption
      key="13"
      label="13"
      value={13}
    />
    <FormSelectOption
      key="14"
      label="14"
      value={14}
    />
  </FormSelect>
</FormGroup>
`;

exports[`<NodeCountInput> scaling dialog behavior multiAz renders with no quota above current value 1`] = `
<FormGroup
  fieldId="compute-nodes"
  label="compute nodes"
>
  <FormSelect
    aria-label="Compute nodes"
    className="quota-dropdown"
    isDisabled={false}
    isIconSprite={false}
    isRequired={false}
    name="compute-nodes"
    onBlur={[Function]}
    onChange={[MockFunction]}
    onFocus={[Function]}
    ouiaSafe={true}
    validated="default"
    value=""
  >
    <FormSelectOption
      key="9"
      label="3"
      value={9}
    />
    <FormSelectOption
      key="12"
      label="4"
      value={12}
    />
  </FormSelect>
  <span>
    × 3 zones =
     
     
    compute nodes
  </span>
</FormGroup>
`;

exports[`<NodeCountInput> scaling dialog behavior singleAZ renders with no quota above current value 1`] = `
<FormGroup
  fieldId="compute-nodes"
  label="compute nodes"
>
  <FormSelect
    aria-label="Compute nodes"
    className="quota-dropdown"
    isDisabled={false}
    isIconSprite={false}
    isRequired={false}
    name="compute-nodes"
    onBlur={[Function]}
    onChange={[MockFunction]}
    onFocus={[Function]}
    ouiaSafe={true}
    validated="default"
    value=""
  >
    <FormSelectOption
      key="4"
      label="4"
      value={4}
    />
    <FormSelectOption
      key="5"
      label="5"
      value={5}
    />
    <FormSelectOption
      key="6"
      label="6"
      value={6}
    />
  </FormSelect>
</FormGroup>
`;
